updating projects and reading

--- a/projects.html
+++ b/projects.html
@@ -51,25 +51,47 @@
           </p>
 
           <div class="project-post">
+            <p class="project-title"><b>Mercury</b></p>
+            <p class="project-description">
+              HackMIT 2025 1st Place Fetch AI Prize and Final Panel Presenter. Built a smart home sustainability AI agent that automatically adjusts lighting, temperature, and more based on climate conditions.
+            </p>
+            <div class="project-links">
+              <a href="https://medium.com/@karenvo/mercury-ai-agents-that-equip-your-home-81fa1f3abcdf" target="_blank" rel="noopener noreferrer" class="project-link">Article</a>
+                <a href="https://www.youtube.com/watch?v=3rIe4plbECU" target="_blank" rel="noopener noreferrer" class="project-link">Demo Video</a>
+                <a href="https://github.com/katie-cheng/hack-mit-2025" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Aegis</b></p>
+            <p class="project-description">
+              1st Place Grand Prize at xAI x Vercel Hackathon. Built autonomous emergency response system that can instantly process visual information from IDs, maintain continuous real-time location tracking, and conduct intelligent conversations to provide personalized guidance.
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/xAI-Vercel-Hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+            </div>
+          </div>
+
+          <div class="project-post">
             <p class="project-title"><b>ContractMe</b></p>
             <p class="project-description">
-              2nd Place Best Overall Hack at Brex AgentJam Hackathon by Pylon, Sixtyfour, Lovable, and Fondo. Built an AI agent that automatically handles the entire essential services contracting pipeline, from a voice-based phone agent handling the initial request to a full-fledged contract management system.
+              2nd Place Best Overall Hack at Brex AgentJam Hackathon by Pylon, Sixtyfour, Lovable, and Fondo. Built AI agent that automatically handles the entire essential services contracting pipeline, from a voice-based phone agent handling the initial request to a full-fledged contract management system.
             </p>
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1FW4zwhs1E_8yNIxPShxd1ZEWAeiT6jT0/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="project-link">Demo Video</a>
-                <a href="https://github.com/vyomfadia/contract-me" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+                <a href="https://github.com/vyomfadia/contract-me" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
             </div>
           </div>
 
           <div class="project-post">
             <p class="project-title"><b>Code Canary</b></p>
             <p class="project-description">
-              Best Overall Hack + 2nd Place Modal Prize at the AI Agent & Infra Hackathon by Lux Capital, Modal, Cognition, AWS, and Ramp. Built an AI agent that generates SBOMs, detects vulnerabilities, and triages transitive dependency risks like typosquatting and maintainer takeovers.
+              Best Overall Hack + 2nd Place Modal Prize at the AI Agent & Infra Hackathon by Lux Capital, Modal, Cognition, AWS, and Ramp. Built AI agent that generates SBOMs, detects vulnerabilities, and triages transitive dependency risks like typosquatting and maintainer takeovers.
             </p>
             <div class="project-links">
                 <a href="https://devpost.com/software/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
                 <a href="https://www.youtube.com/watch?v=mQcUn0XgKqY" target="_blank" rel="noopener noreferrer" class="project-link">Video</a>
-                <a href="https://github.com/tonywangs/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+                <a href="https://github.com/tonywangs/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
             </div>
           </div>
 
@@ -82,7 +104,7 @@
             <div class="project-links">
                 <a href="https://devpost.com/software/exploragon" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
                 <a href="https://youtu.be/gYtgMuymzdY" target="_blank" rel="noopener noreferrer" class="project-link">Video</a>
-                <a href="https://github.com/tonywangs/exploragon" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+                <a href="https://github.com/tonywangs/exploragon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
             </div>
           </div>
 
@@ -92,14 +114,14 @@
               With Korbin and Benny, built a Next.js tool that turns a simple web form into a fully filled California SC-100 PDF. Features AI-assisted legal text generation, court lookup, business info autofill, and smart validation.
             </p>
             <div class="project-links">
-                <a href="https://github.com/tonywangs/cognition-hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Github</a>
+                <a href="https://github.com/tonywangs/cognition-hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
             </div>
           </div>
           
           <div class="project-post">
             <p class="project-title"><b>Caply (User Data Management Tool)</b></p>
             <p class="project-description">
-              Akaash and I engineered a tool to streamline California Consumer Privacy Act (CCPA) compliance for SMBs. Caply empowers companies to efficiently identify and purge personal data from their systems, as well as automatically notifying third-party vendors, ensuring adherence to critical privacy regulations.
+              Akaash and I built a tool to streamline California Consumer Privacy Act (CCPA) compliance for SMBs. Caply empowers companies to efficiently identify and purge personal data from their systems, as well as automatically notifying third-party vendors, ensuring adherence to critical privacy regulations.
             </p>
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1t7oMt2b-8XfqO7WqlDhy10kgEx0lHQdg/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
@@ -118,6 +140,17 @@
           </div>
 
           <div class="project-post">
+            <p class="project-title"><b>Laboobie</b></p>
+            <p class="project-description">
+              We made a Labubu dance! Laboobie can FaceTime you, call your phone, swap between being an AI girlfriend or boyfriend depending on which Labubu you hold up, and even challenge you to Red Light, Green Light from Squid Game. Won 3rd Place at the AI Valley x Pebblebed Hackathon. 
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/ai-valley-hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+                <a href="https://drive.google.com/file/d/1PMIE-oo6O2yTriJsnbmpAwZ_HlwlPQd0/view?usp=sharing " target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
+            </div>
+          </div>
+
+          <div class="project-post">
             <p class="project-title"><b>SEC Analysis Tool</b></p>
             <p class="project-description">
               Built an AI web application that allows users to upload SEC filings (such as 10-Ks or 10-Qs) and ask natural-language questions about them. Supports consistent file storage and multiple conversation threading. 
@@ -127,6 +160,14 @@
                 <a href="https://youtu.be/o0zxt_X5EsY " target="_blank" rel="noopener noreferrer" class="project-link">Demo</a>
                 <a href="https://sec-analyzer-b75a1b2841d4.herokuapp.com/" target="_blank" rel="noopener noreferrer" class="project-link">Site</a>
             </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Ensemble AI</b></p>
+            <p class="project-description">
+              Built orchestration layer for ensemble multi-model video captioning, orchestrating Qwen, Claude, Nova, and YOLO, achieving quality gains in anonymous human eval tests and hallucination F1 scores.  
+            </p>
+            <img src="images/consensus_image.svg" alt="Demo of the Ensemble AI project" class="project-image" width="100%">
           </div>
 
           <div class="project-post">
@@ -146,7 +187,7 @@
               Coded 'Neurosense,' an expert support and crisis care platform informed by DSM-5 and SAMHSA guidelines. This application provides real-time assistance, bridging the gap between individuals in need and professionally-backed mental health advice/resources.
             </p>
             <div class="project-links">
-                <a href="https://github.com/tonywangs/neurosense" target="_blank" rel="noopener noreferrer" class="project-link">GitHub</a>
+                <a href="https://github.com/tonywangs/neurosense" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
                 <a href="https://devpost.com/software/neurosense-8ykswz" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
             </div>
           </div>
@@ -166,7 +207,7 @@
           <div class="project-post">
             <p class="project-title"><b>MultiSport (AI-Powered Sports Analytics)</b></p>
             <p class="project-description">
-              Designed and implemented 'MultiSport,' a real-time CV system for simultaneously live tracking multiple players in sports footage. The system provides bird's-eye view analytics, offering insights into player movement and team strategy. Implemented Kalman filtering, homography transformation, Canny edge detection, etc. 
+              Designed and implemented real-time CV system for simultaneously live tracking multiple players in sports footage, with bird's-eye view analytics for insights in player movement and strategy. Implemented Kalman filtering, homography transformation, Canny edge detection, etc. 
             </p>
             <div class="project-links">
                 <a href="https://github.com/tonywangs/cs131-final-project" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
@@ -211,7 +252,7 @@
           <div class="project-post">
             <p class="project-title"><b>HeadcountAI (AI for Headcount Forecasting)</b></p>
             <p class="project-description">
-             During my Amazon internship last summer, I designed and proposed an AI Technical Program Manager for project forecasting. I integrated LLMs and standard neural networks to create a more accurate and automated system for workforce planning. I received an Amazon Raising the Bar award for my project! 
+             Designed and proposed an AI Technical Program Manager for project forecasting. I integrated LLMs and deep neural networks to create a more accurate and automated system for workforce planning. Received Amazon Raising the Bar award. 
             </p>
             <img src="images/amazon-block-diagram.png" alt="Block diagram of the Amazon headcount forecasting system" class="project-image" width="50%">
           </div>
