--- a/reading.html
+++ b/reading.html
@@ -53,6 +53,7 @@
               <br>
 
               <p><b> 2025 </b></p>
+              <p><i style="color: #64ffda;"> a little life </i> | hanya yanagihara </p>
               <p><i style="color: #64ffda;"> cradle to cradle: remaking the way we make things </i> | william mcdonough, michael braungart</p>
               <p><i style="color: #64ffda;"> the portable nietzsche </i> | translation by walter kaufmann</p>
               <p><i style="color: #64ffda;"> abolish silicon valley: how to liberate technology from capitalism </i> | wendy liu </p>
@@ -70,6 +71,7 @@
               <p><i style="color: #64ffda;"> the analects </i> | confucius</p>
               <p><i style="color: #64ffda;"> a ballad of songbirds and snakes </i> | suzanne collins</p>
               <p><i style="color: #64ffda;"> home body </i> | rupi kaur</p>
+              <p><i style="color: #64ffda;"> the opposite of depression </i> | david m carreon</p>
               <br>
 
               <p><b> 2024 </b></p>
@@ -142,6 +144,7 @@
               <p><i style="color: #64ffda;"> anne frank: the diary of a young girl </i> | anne frank </p>
               <p><i style="color: #64ffda;"> american born chinese </i> | gene luen yang </p>
               <p><i style="color: #64ffda;"> illuminae </i> | amie kaufman & jay kristoff </p>
+              <p><i style="color: #64ffda;"> love and gelato </i> | jenna evans welch </p>
               <p><i style="color: #64ffda;"> metamorphosis </i> | franz kafka </p>
               <p><i style="color: #64ffda;"> warriors don't cry </i> | melba pattillo beals </p>
               <p><i style="color: #64ffda;"> the odyssey </i> | homer </p>
@@ -153,7 +156,7 @@
 
               <br>
 
-              <p><b> pre 2019 faves</b></p>
+              <p><b> pre 2019</b></p>
               <p><i style="color: #64ffda;"> the grapes of wrath </i> | john steinbeck</p>
               <p><i style="color: #64ffda;"> the lord of the flies </i> | william golding </p>
               <p><i style="color: #64ffda;"> to kill a mockingbird </i> | harper lee </p>
@@ -163,7 +166,6 @@
               <p><i style="color: #64ffda;"> the adventures of tom sawyer </i> | mark twain </p>
               <p><i style="color: #64ffda;"> adventures of huckleberry finn </i> | mark twain </p>
               <p><i style="color: #64ffda;"> i am malala </i> | malala yousafzai </p>
-              <p><i style="color: #64ffda;"> love and gelato </i> | jenna evans welch </p>
               <p><i style="color: #64ffda;"> the call of the wild </i> | jack london </p>
               <p><i style="color: #64ffda;"> the outsiders </i> | s.e. hinton </p>
               <br>
