updating out-of-date personal website content

--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <!-- currently -->
         <p id="currentlyHeader"><b>$ ls ~/present</b></p>
         <p id="currentlyContent">
-          research @ <a href="https://amazon.jobs/content/en/teams/devices-and-services/lab126">amazon lab126</a>,
-          co-president @ <a href="https://www.stanfordacm.org/">stanford acm</a>, 
-          technical advisor intern @ <a href="https://scale.com/">scale ai</a>, 
+          research @ <a href="https://arcinstitute.org/">arc institute</a>,
+          engineering @ <a href="hhttps://x.ai/">xAI / x</a>,
+          co-president @ <a href="https://www.stanfordacm.org/">stanford acm</a>,  
           <!-- fellow @ <a href="https://pear.vc/programs/dorm/garage/">pear garage</a> and <a href="https://www.fellowship.rippleventures.com/">ripple x</a>,  -->
-          assistant pm @ <a href="https://stanford-marketing.org/">stanford marketing</a>, 
-          venture scout @ <a href="https://somacap.com/">soma capital</a>, 
-          co-founder @ stanford <a href="https://pitlab.stanford.edu/">pit govtech fellowship</a>, and
-          ai @ <a href="https://paragonfellowship.org/projects/santa-clara-county-fa24">county of santa clara</a> 
+          assistant pm @ <a href="https://www.stanfordmanagementgroup.com/">stanford management</a>, 
+          <!-- venture scout @ <a href="https://somacap.com/">soma capital</a>, -->
+          co-founder @ stanford <a href="https://pitlab.stanford.edu/">pit lab govtech fellowship</a>, and 
+          designer @ <a href="https://www.stanford-mint.com/">mint magazine</a>
         </p>
 
         <br> 
@@ -76,16 +76,20 @@
         <!-- formerly -->
         <p id="formerlyHeader"><b>$ ls ~/past</b></p>
         <p id="formerlyContent">
-          intern @ <a href="https://www.amazon.com/">amazon</a>, 
+          intern @ <a href="https://scale.com/">scale ai</a>,
+          intern @ <a href="https://www.amazon.com/">amazon / amazon lab 126</a>, 
+          <!-- ml @ <a href="https://www.amazon.com/">amazon lab 126 </a>,  -->
           organizer @ <a href="https://www.treehacks.org/">treehacks</a>, 
           research @ <a href="https://ai.stanford.edu/">sail</a>, 
-          swe @ <a href="https://www.developforgood.org/">develop 4 good</a>,
+          ai @ <a href="https://paragonfellowship.org/projects/santa-clara-county-fa24">county of santa clara</a>, 
+          swe @ <a href="https://www.developforgood.org/">d4g</a>,
+          venture @ <a href="https://somacap.com/">soma capital</a>,
           <!-- assistant pm @ <a href="https://stanford-marketing.org/">stanford marketing</a>,   -->
-          fellow @ <a href="https://pear.vc/programs/dorm/garage/">pear garage</a> and <a href="https://www.fellowship.rippleventures.com/">ripple x</a>, 
-          freshman class president @ <a href="https://alumni.stanford.edu/students/undergraduate/frosh/">stanford</a>, 
-          teacher @ <a href="https://www.non-trivial.org/">non-trivial</a>, 
-          founder @ <a href="https://www.acsef.org/slb">acsef slb</a>, 
-          and gold medalist @ <a href="https://usawkf.org/usa-team/#design">kungfu team usa</a>
+          <!-- fellow @ <a href="https://pear.vc/programs/dorm/garage/">pear garage</a> and <a href="https://www.fellowship.rippleventures.com/">ripple x</a>,  -->
+          freshman class president @ <a href="https://alumni.stanford.edu/students/undergraduate/frosh/">stanford</a>, and
+          <!-- teacher @ <a href="https://www.non-trivial.org/">non-trivial</a>,  -->
+          founder @ <a href="https://www.acsef.org/slb">acsef slb</a> 
+          <!-- and gold medalist @ <a href="https://usawkf.org/usa-team/#design">kungfu team usa</a> -->
         </p>
       
         <br>
