--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@
           <div class="project-post">
             <p class="project-title"><b>Aegis</b></p>
             <p class="project-description">
-              1st Place Grand Prize at xAI x Vercel Hackathon. Built autonomous emergency response system that can instantly process visual information from IDs, maintain continuous real-time location tracking, and conduct intelligent conversations to provide personalized guidance.
+              1st Place Grand Prize at xAI x Vercel Hackathon. Built autonomous emergency response system that can process visual information from IDs, maintain real-time location tracking, and conduct calls to provide emergency guidance.
             </p>
             <div class="project-links">
                 <a href="https://github.com/tonywangs/xAI-Vercel-Hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
@@ -75,7 +75,7 @@
           <div class="project-post">
             <p class="project-title"><b>ContractMe</b></p>
             <p class="project-description">
-              2nd Place Best Overall Hack at Brex AgentJam Hackathon by Pylon, Sixtyfour, Lovable, and Fondo. Built AI agent that automatically handles the entire essential services contracting pipeline, from a voice-based phone agent handling the initial request to a full-fledged contract management system.
+              2nd Place Best Overall Hack at Brex AgentJam Hackathon. Built AI agent that automatically handles the essential services contracting pipeline, from a voice-based phone agent handling the initial request to a full-fledged contract management system.
             </p>
             <div class="project-links">
                 <a href="https://drive.google.com/file/d/1FW4zwhs1E_8yNIxPShxd1ZEWAeiT6jT0/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="project-link">Demo Video</a>
@@ -92,6 +92,36 @@
                 <a href="https://devpost.com/software/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Devpost</a>
                 <a href="https://www.youtube.com/watch?v=mQcUn0XgKqY" target="_blank" rel="noopener noreferrer" class="project-link">Video</a>
                 <a href="https://github.com/tonywangs/code-canary" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Sonus</b></p>
+            <p class="project-description">
+              2nd Place Coinbase Prize at YC Agentic Payments Hackathon. Built automatic payment verification system for consumers. 
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/locus-agentic-hackathon" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>A LIVING POEM</b></p>
+            <p class="project-description">
+              Infinitely self-rewriting poem insprired by A LIVING POEM by sasha stiles, an art piece at NYC MoMA.
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/living-poem" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
+            </div>
+          </div>
+
+          <div class="project-post">
+            <p class="project-title"><b>Constellation</b></p>
+            <p class="project-description">
+              An engineering-first recruiting system that visualizes talent networks as a 3D galaxy. Calibration shows precision@20 with gold standard markers.
+            </p>
+            <div class="project-links">
+                <a href="https://github.com/tonywangs/constellation" target="_blank" rel="noopener noreferrer" class="project-link">Code</a>
             </div>
           </div>
 
