--- a/reading.html
+++ b/reading.html
@@ -60,6 +60,9 @@
               <p><i style="color: #64ffda;"> bhagavad gita </i> | translation by stephen mitchell</p>
               <p><i style="color: #64ffda;"> chip war: the fight for the world's most critical technology </i> | chris miller</p>
               <p><i style="color: #64ffda;"> gödel, escher, bach: an eternal golden braid </i> | douglas r. hofstadter</p>
+              <p><i style="color: #64ffda;"> like a sky inside </i> | jakuta alikavazovic</p>
+              <p><i style="color: #64ffda;"> orientalism </i> | edward said</p>
+              <p><i style="color: #64ffda;"> retribution: donald trump and the campaign that changed america </i> | jonathan karl</p>
               <p><i style="color: #64ffda;"> hope for cynics: the surprising science of human goodness </i> | jamil zaki</p>
               <p><i style="color: #64ffda;"> death's end </i> | cixin liu</p>
               <p><i style="color: #64ffda;"> the happiness hypothesis </i> | jonathan haidt</p>
