--- a/writing.html
+++ b/writing.html
@@ -55,7 +55,8 @@
                 <p><i>fifty shades of branding</i> | <a href="https://tonywang.substack.com/p/fifty-shades-of-branding">substack</a></p>
                 <p><i>tech bro go home: on queer rage and ruin </i> | <a href="https://tonywang.substack.com/p/tech-bro-go-home-on-queer-rage-and">substack</a></p>
                 <p><i>spies, systems, satire, and sleep </i> | <a href="https://tonywang.substack.com/p/spies-systems-satire-and-sleep">substack</a></p>
-                <p><i>the anti-buddha </i> | <a href="./essays/anti-buddha.html">read here</a></p>
+                <p><i>the anti-buddha </i> | <a href="https://tonywang.substack.com/p/the-anti-buddha">substack</a></p>
+                <p><i>a beautiful, overflowing day </i> | <a href="https://tonywang.substack.com/p/a-beautiful-overflowing-day">substack</a></p>
                 <p><i>on the end of personalization</i> | <a href="./essays/end-of-personalization.html">read here</a></p>
                 <!-- <p><i> </i></p> -->
                 <br>
